Update deprecated references

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -294,6 +294,7 @@ agent {
     #     sdk_cache: "/clearml_agent_cache"
     #     apt_cache: "/var/cache/apt/archives"
     #     ssh_folder: "/root/.ssh"
+    #     ssh_ro_folder: "/.ssh"
     #     pip_cache: "/root/.cache/pip"
     #     poetry_cache: "/root/.cache/pypoetry"
     #     vcs_cache: "/root/.clearml/vcs-cache"
@@ -451,7 +452,7 @@ sdk {
         vcs_repo_detect_async: True
 
         # Store uncommitted git/hg source code diff in experiment manifest when training in development mode
-        # This stores "git diff" or "hg diff" into the experiment's "script.requirements.diff" section
+        # This stores "git diff" or into the experiment's "script.requirements.diff" section
         store_uncommitted_code_diff_on_train: True
 
         # Support stopping an experiment in case it was externally stopped, status was changed or task was reset
