--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -161,6 +161,9 @@ agent {
     vcs_cache: {
         enabled: true,
         path: ~/.clearml/vcs-cache
+
+        # if git pull failed, always revert to re-cloning the repo, it protects against old user name changes
+        # clone_on_pull_fail: true
     },
 
     # DEPRECATED: please use `venvs_cache` and set `venvs_cache.path`
