Fix cached repositories were not passing user/token when pulling, agent.vcs_cache.clone_on_pull_fail now defaults to false

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -163,7 +163,7 @@ agent {
         path: ~/.clearml/vcs-cache
 
         # if git pull failed, always revert to re-cloning the repo, it protects against old user name changes
-        # clone_on_pull_fail: true
+        # clone_on_pull_fail: false
     },
 
     # DEPRECATED: please use `venvs_cache` and set `venvs_cache.path`
