Add venvs_cache.path mount override for non-root containers (use: agent.docker_internal_mounts.venvs_cache)

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -308,6 +308,7 @@ agent {
     #     pip_cache: "/root/.cache/pip"
     #     poetry_cache: "/root/.cache/pypoetry"
     #     vcs_cache: "/root/.clearml/vcs-cache"
+    #     venvs_cache: "/root/.clearml/venvs-cache"
     #     venv_build: "~/.clearml/venvs-builds"
     #     pip_download: "/root/.clearml/pip-download-cache"
     # }
