--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -54,15 +54,17 @@
     # docker_use_activated_venv: true
 
     # select python package manager:
-    # currently supported: pip, conda and poetry
+    # currently supported: pip, conda, uv and poetry
     # if "pip" or "conda" are used, the agent installs the required packages
     # based on the "installed packages" section of the Task. If the "installed packages" is empty,
     # it will revert to using `requirements.txt` from the repository's root directory.
     # If Poetry is selected and the root repository contains `poetry.lock` or `pyproject.toml`,
     # the "installed packages" section is ignored, and poetry is used.
     # If Poetry is selected and no lock file is found, it reverts to "pip" package manager behaviour.
+    # If uv is selected and the root repository contains `uv.lock` or `pyproject.toml`,
+    # the "installed packages" section is ignored, and uv is used.
     package_manager: {
-        # supported options: pip, conda, poetry
+        # supported options: pip, conda, poetry, uv
         type: pip,
 
         # specify pip version to use (examples "<20.2", "==19.3.1", "", empty string will install the latest version)
@@ -70,6 +72,8 @@
         # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
         # poetry_version: "<2",
         # poetry_install_extra_args: ["-v"]
+        # uv_version: ">0.4",
+        # uv_install_extra_args: ["-v"]
 
         # virtual environment inherits packages from system
         system_site_packages: false,
@@ -133,6 +137,10 @@
         # if set to true, the agent will look for the "poetry.lock" file 
         # in the passed current working directory instead of the repository's root directory.
         poetry_files_from_repo_working_dir: false
+
+        # if set to true, the agent will look for the "uv.lock" file 
+        # in the passed current working directory instead of the repository's root directory.
+        uv_files_from_repo_working_dir: false
     },
 
     # target folder for virtual environments builds, created when executing experiment
