--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -74,8 +74,10 @@ agent {
     # If Poetry is selected and the root repository contains `poetry.lock` or `pyproject.toml`,
     # the "installed packages" section is ignored, and poetry is used.
     # If Poetry is selected and no lock file is found, it reverts to "pip" package manager behaviour.
+    # If uv is selected and the root repository contains `uv.lock` or `pyproject.toml`,
+    # the "installed packages" section is ignored, and uv is used.
     package_manager: {
-        # supported options: pip, conda, poetry
+        # supported options: pip, conda, poetry, uv
         type: pip,
 
         # specify pip version to use (examples "<20.2", "==19.3.1", "", empty string will install the latest version)
@@ -83,6 +85,8 @@ agent {
         # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
         # poetry_version: "<2",
         # poetry_install_extra_args: ["-v"]
+        # uv_version: ">0.4",
+        # uv_install_extra_args: ["-v"]
 
         # virtual environment inheres packages from system
         system_site_packages: false,
