Update configs to highlight sync command

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -73,7 +73,7 @@
         # poetry_version: "<2",
         # poetry_install_extra_args: ["-v"]
         # uv_version: ">0.4",
-        # uv_install_extra_args: ["-v"]
+        # uv_sync_extra_args: ["--all-extras"]
 
         # virtual environment inherits packages from system
         system_site_packages: false,
