--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -86,7 +86,7 @@ agent {
         # poetry_version: "<2",
         # poetry_install_extra_args: ["-v"]
         # uv_version: ">0.4",
-        # uv_install_extra_args: ["-v"]
+        # uv_sync_extra_args: ["--all-extras"]
 
         # virtual environment inheres packages from system
         system_site_packages: false,
